--- a/TA.ipynb
+++ b/TA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "from iexfinance.stocks import get_historical_data\n",
     "from datetime import datetime\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import scorer, accuracy_score"
    ]
   },
   {
@@ -39,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -339,6 +342,33 @@
    "source": [
     "Df.Strategy_Return[split:].cumsum().plot(figsize=(10,5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = accuracy_score(y_test, pd.DataFrame(cls.predict(scaler.transform(X_test))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
